[package]
name = "pernixc_parser"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_arena = { path = "../pernixc_arena" }
pernixc_lexical = { path = "../pernixc_lexical" }
pernixc_source_file = { path = "../pernixc_source_file" }
pernixc_target = { path = "../pernixc_target" }
pernixc_handler = { path = "../pernixc_handler" }
getset = { workspace = true }
static_assertions = { workspace = true }
paste = { workspace = true }
enum-as-inner = { workspace = true }
derive_more = { workspace = true }
flexstr = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
