[package]
name = "pernixc_print"
version = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pernixc_source = { path = "../pernixc_source" }
derive-new = { workspace = true }
