[package]
name = "pernixc_query"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_arena = { path = "../pernixc_arena" }
pernixc_target = { path = "../pernixc_target" }
pernixc_abort = { path = "../pernixc_abort" }
pernixc_query_derive = { path = "../pernixc_query_derive" }
parking_lot = { workspace = true }
dashmap = { workspace = true }
fnv = { workspace = true }
static_assertions = { workspace = true }
smallbox = { workspace = true }
getset = { workspace = true }
serde = { workspace = true }


[lints]
workspace = true
