[package]
name = "pernixc_query_base"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true }
pernixc_query = { path = "../pernixc_query" }
pernixc_source_file = { path = "../pernixc_source_file" }

[lints]
workspace = true
