[package]
name = "pernixc_query_base"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_query = { path = "../pernixc_query" }
pernixc_source_file = { path = "../pernixc_source_file" }
pernixc_handler = { path = "../pernixc_handler" }
pernixc_lexical = { path = "../pernixc_lexical" }
pernixc_stable_type_id = { path = "../pernixc_stable_type_id" }
pernixc_syntax = { path = "../pernixc_syntax" }
pernixc_parser = { path = "../pernixc_parser" }
pernixc_target = { path = "../pernixc_target" }
pernixc_diagnostic = { path = "../pernixc_diagnostic" }
rayon = { workspace = true }
parking_lot = { workspace = true }
enum-as-inner = { workspace = true }
dashmap = { workspace = true }
fnv = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
extend = { workspace = true }

[lints]
workspace = true
