[lib]
proc-macro = true

[package]
name = "pernixc_query_derive"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_identifiable_derive_lib = { path = "../pernixc_identifiable_derive_lib" }
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
