[package]
name = "pernixc_resolution"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_term = { path = "../pernixc_term" }
pernixc_table = { path = "../pernixc_table" }
pernixc_component = { path = "../pernixc_component" }
pernixc_handler = { path = "../pernixc_handler" }
pernixc_source_file = { path = "../pernixc_source_file" }
pernixc_diagnostic = { path = "../pernixc_diagnostic" }
pernixc_log = { path = "../pernixc_log" }
pernixc_syntax = { path = "../pernixc_syntax" }
pernixc_lexical = { path = "../pernixc_lexical" }
thiserror = { workspace = true }
derive_more = { workspace = true }
enum-as-inner = { workspace = true }

[lints]
workspace = true
