[package]
name = "pernixc_semantic"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pernixc_base = { path = "../pernixc_base" }
pernixc_lexical = { path = "../pernixc_lexical" }
pernixc_syntax = { path = "../pernixc_syntax" }
enum-as-inner = { workspace = true }
thiserror = { workspace = true }
getset = { workspace = true }
lazy_static = { workspace = true }
derive_more = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
take_mut = { workspace = true }
rayon = { workspace = true }
bitflags = { workspace = true }
typestate = { workspace = true }
enum_dispatch = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
