[package]
name = "pernixc_source"
version = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pernixc_system = { path = "../pernixc_system" }
getset = { workspace = true }
thiserror = { workspace = true }
enum-as-inner = { workspace = true }
colored = { workspace = true }
derive_more = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
