[package]
name = "pernixc_source_file"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_arena = { path = "../pernixc_arena" }
pernixc_target = { path = "../pernixc_target" }
getset = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
codespan-reporting = { workspace = true }

[lints]
workspace = true
