[package]
name = "pernixc_stable_type_id"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
pernixc_identifiable_derive = { path = "../pernixc_identifiable_derive" }

[lints]
workspace = true
